--- a/sigmaan/index.html
+++ b/sigmaan/index.html
@@ -5,6 +5,6 @@
 		<title></title>
 	</head>
 	<body>
-		
+		<marquee>A website for designing and implementing algorithms</marquee>
 	</body>
 </html>
