--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
+<!DOCTYPE html>
 <html>
-<head>
-</head>
-<body>
-	<h1>SigmaAn</h1>
-	<p>A website for designing and implementing algorithms</p>
-</body>
+	<head>
+		<meta charset="utf-8" />
+		<title></title>
+	</head>
+	<body>
+		<h1>Sigmaan</h1>
+		<marquee>A website for designing and implementing algorithms</marquee>
+	</body>
 </html>
