--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
-<!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8" />
-		<title></title>
-	</head>
-	<body>
-		<h1>Sigmaan</h1>
-		<marquee>A website for designing and implementing algorithms</marquee>
-	</body>
+<head>
+	<title>Sigma An</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css" />
+</head>
+<body>
+	<header>
+		<a href="/">
+			<img src="img/logo.png" alt="Logo"/>
+		</a>
+	</header>
+	<h2>Introduction</h2>
+	<p>Sigma An is a website for designing and implementing algorithms.</p>
+	<h2>Algorithms</h2>
+	<ul>
+		<li><a href="https://github.com/SigmaAn/sa/tree/master/binary_search">Binary Search</a></li>
+		<li><a href="https://github.com/SigmaAn/sa/tree/master/insertion_sort">Insertion Sort</a></li>
+		<li><a href="https://github.com/SigmaAn/sa/tree/master/selection_sort">Selection Sort</a></li>
+		<li><a href="https://github.com/SigmaAn/sa/tree/master/mergen_sort">Merge Sort</a></li>
+	</ul>
+	<h2>Contribution</h2>
+	<footer>
+		<p>&copy 2016</p>
+	</footer>
+</body>
 </html>
