客服加上了

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
   <meta charset="UTF-8">
 
+<link href="css/zzsc.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="js/jquery.js"></script>
   <title>HTML5/CSS3滑块动画菜单 图标动画很酷DEMO演示</title>
 
   <style>
@@ -19,7 +21,7 @@ html{
 }
 body{
   text-align:center;
-  background:url('css/bg.jpg')no-repeat;
+  background:url('css/bg.jpg')repeat;
   	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
@@ -221,6 +223,10 @@ transition: all 400ms cubic-bezier(.16,1.23,.87,1.18);
 
 <body>
 
+
+
+
+
   <nav id="menu">
   <div style="text-align:center;clear:both">
 <script src="/gg_bd_ad_720x90.js" type="text/javascript"></script>
@@ -321,50 +327,36 @@ transition: all 400ms cubic-bezier(.16,1.23,.87,1.18);
     </ul>
 </nav>
 
-  <nav id="menu">
-  <div style="text-align:center;clear:both">
-<script src="/gg_bd_ad_720x90.js" type="text/javascript"></script>
-<script src="/follow.js" type="text/javascript"></script>
-</div>
-     <ul>
-      <li class="rocket"><a href="">Item menu 1</a></li>
-      <li class="wine"><a href="">Item menu 2</a></li>
-      <li class="burger"><a href="">Item menu 3</a></li>
-      <li class="comment"><a href="">Item menu 4</a></li>
-      <li class="sport" ><a href="">Item menu 5</a></li>
-      <li class="earth"><a href="">Item menu 6</a></li>
-  <div class="current">
-    <div class="top-arrow"></div>   
-    <div class="current-back"></div>
-    <div class="bottom-arrow"></div>
-  </div>
-    </ul>
-</nav>
 
-  <nav id="menu">
-  <div style="text-align:center;clear:both">
-<script src="/gg_bd_ad_720x90.js" type="text/javascript"></script>
-<script src="/follow.js" type="text/javascript"></script>
-</div>
-     <ul>
-      <li class="rocket"><a href="">Item menu 1</a></li>
-      <li class="wine"><a href="">Item menu 2</a></li>
-      <li class="burger"><a href="">Item menu 3</a></li>
-      <li class="comment"><a href="">Item menu 4</a></li>
-      <li class="sport" ><a href="">Item menu 5</a></li>
-      <li class="earth"><a href="">Item menu 6</a></li>
-  <div class="current">
-    <div class="top-arrow"></div>   
-    <div class="current-back"></div>
-    <div class="bottom-arrow"></div>
-  </div>
-    </ul>
-</nav>
+
+
+
+
 
   <script src='js/none.js'></script>
 
   <script src="js/index.js"></script>
 
+
+
+
+<!-- 代码 开始 -->
+<audio id="bgMusic" src="zzsc.mp3" autoplay="autoplay" loop="loop"></audio>
+<div id="service">
+	<a href="#" class="srvLog" target="_blank">申请试用</a>
+	<a class="srvCns" href="tencent://message/?uin=183631330&Site=企业网站&Menu=yes">在线咨询</a>
+	<a href="#" class="srvDj" target="_blank">申请合作</a>
+	<a class="mscBtn" id="audioBtn" title="开关音效">开关音效</a>
+	<a class="goTop" id="goTop" title="返回顶部" style="display:none">返回顶部</a>
+</div>
+<script type="text/javascript" src="js/service.js">	</script>
+<!-- 代码 结束 -->
+
+<div style="text-align:center;margin:100px 0 900px 0;">
+<p>适用浏览器：IE8、360、FireFox、Chrome、Safari、Opera、傲游、搜狗、世界之窗.</p>
+<p>来源：<a href="http://www.sigmaan.org" target="_blank">sigmaan</a></p>
+</div>
+<!--kefu-->
 </body>
 
 </html>
